test/parser/type_declaration/empty_record_error.exp
Error: Record must have at least one field
test/parser/type_declaration/empty_record_error.myte:3:5-10
 3 | type t { }
   |      ^^^^^